<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_chatroom_list">Chat Room List</string>
    <string name="title_chatroom_detail">Chat Room Detail</string>
    <string name="title_topic_registration">Topic Registration</string>    
    
    <string name="app_name">Chat App</string>
    <string name="user_name">Client</string>
    <string name="app_port">6666</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="user_name_default">Client</string>
    <string name="latitude_default">40.744906</string>
    <string name="longitude_default">-74.023937</string>    
    <!-- <string name="latitude">40.744906</string>
    <string name="longitude">-74.023937</string> -->
    <string name="UNAME">uname</string>
    <string name="LATITUDE">lati</string>
    <string name="LONGITUDE">longi</string>    
    
    <!-- String literals in the UI -->
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="chatroom_name">Chatroom Name</string>
    <string name="chatroom_ip">Chatroom IP</string>
    <string name="chatroom_port">Chatroom Port</string>
    <string name="register_menu_label">Register</string>
    <string name="topic_register">Register for a Topic</string>
    <string name="destination_host">Destination Host</string>
    <string name="target_host_default">10.0.2.2</string>
    <string name="destination_port">Destination Port</string>
    <string name="target_port_default">6666</string>
    <string name="message_edit_text">Type your message here.</string>
    <string name="send_label">SEND</string>
    <string name="register_button_label">REGISTER</string>    
    <string name="show_peers">SHOW PEERS</string>
    <string name="back">BACK</string>
    

</resources>