<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout21"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dest_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_host"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dest_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/target_host_default" />
             
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/port_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_port"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/port_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/target_port_default" />
             
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" 
        android:orientation="horizontal">

        <EditText
            android:id="@+id/message_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/message_edit_text"
            android:layout_weight="1"
            android:inputType="text"
            android:singleLine="true" />
            
        <Button
        	android:id="@+id/send_button"
        	android:layout_weight="0"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/send_label" />

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" 
        android:orientation="horizontal">

    <ListView
        android:id="@+id/msgList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" >
    </ListView>

    </LinearLayout>
    
</LinearLayout>